tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_int_ranges/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Missing cases: `None`, `Some(-128..=3)`, `Some(5)`, and 1 more not shown
  ┌─ src/main.nr:4:19
  │
4 │             match Opt::Some(x) {
  │                   ------------
  │

Aborting due to 1 previous error
