tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_int_ranges/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Missing cases: `None`, `Some(-128..=3)`, `Some(5)`, and 1 more not shown
  ┌─ src/main.nr:4:19
  │
4 │             match Opt::Some(x) {
  │                   ------------
  │

Aborting due to 1 previous error
